<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/intro_bg"
    tools:context=".activity.IntroActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_logo"
            android:layout_width="@dimen/_110sdp"
            android:layout_height="@dimen/_110sdp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_145sdp"
            android:src="@drawable/ic_flagwire_logo" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txt_intro1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_logo"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/_40sdp"
            android:text="@string/intro_one"
            android:textColor="@color/black"
            android:textSize="@dimen/text_medium" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txt_intro2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_intro1"
            android:layout_centerInParent="true"
            android:text="@string/intro_second"
            android:textColor="@color/black"
            android:textSize="@dimen/text_medium" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            android:layout_width="@dimen/_210sdp"
            android:layout_height="@dimen/_55sdp"
            android:layout_below="@+id/txt_intro2"
            app:cornerRadius="@dimen/_25sdp"
            android:text="@string/login"
            android:textColor="@color/font_white"
            android:textSize="@dimen/text_small"
            app:backgroundTint="@color/color_bg_button"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/_20sdp" />


        <com.google.android.material.button.MaterialButton
            android:layout_width="@dimen/_210sdp"
            android:layout_height="@dimen/_55sdp"
            android:layout_below="@+id/btn_login"
            app:cornerRadius="@dimen/_25sdp"
            android:text="@string/sign_up"
            android:layout_marginTop="@dimen/_10sdp"
            android:textColor="@color/font_white"
            android:textSize="@dimen/text_small"
            app:backgroundTint="@color/black"
            android:layout_centerInParent="true"
            />

    </RelativeLayout>
</androidx.core.widget.NestedScrollView>