<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ProfileActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/custom_color">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_60sdp"
            android:background="@color/custom_color">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_60sdp"
                android:layout_marginEnd="@dimen/_40sdp"
                android:layout_gravity="center"
                android:textSize="@dimen/text_medium"
                android:text="Profile"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_back_profile"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:src="@drawable/ic_back_arrow"
                android:layout_centerVertical="true"
                android:scaleType="fitXY"
                android:alpha="0.8"
                android:tint="@color/white"
                android:layout_marginStart="@dimen/_15sdp"
                android:background="@android:color/transparent"/>

        </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_500sdp"
                android:background="@drawable/profile_bg"
                android:layout_marginTop="@dimen/_80sdp"
                android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_100sdp"
                android:text="@string/fullname"
                android:textColor="@color/black"
                android:textSize="@dimen/text_large" />
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_edit_fullname"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginStart="@dimen/_25sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_30sdp"
                android:background="@drawable/round_edit_text"
                android:backgroundTint="@color/custom_color"
                android:paddingStart="@dimen/_15sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/font_hint" />


            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/email_id"
                android:textColor="@color/black"
                android:textSize="@dimen/text_large" />
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_edit_profile_email"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginStart="@dimen/_25sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_30sdp"
                android:editable="false"
                android:background="@drawable/round_edit_text"
                android:backgroundTint="@color/custom_color"
                android:paddingStart="@dimen/_15sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/font_hint" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_save_edit_profile"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_55sdp"
                app:cornerRadius="@dimen/_25sdp"
                android:text="@string/save"
                android:layout_marginStart="@dimen/_25sdp"
                android:layout_marginEnd="@dimen/_30sdp"
                android:textColor="@color/font_white"
                android:textSize="@dimen/text_small"
                app:backgroundTint="@color/color_bg_button"
                android:layout_marginTop="@dimen/_30sdp" />

            </LinearLayout>

                <RelativeLayout
                    android:layout_width="@dimen/_120sdp"
                    android:layout_height="@dimen/_120sdp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_gravity="center">
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/profile_image"
                        android:layout_width="@dimen/_100sdp"
                        android:layout_height="@dimen/_100sdp"
                        android:src="@drawable/facebook_icon"
                        app:civ_border_width="1dp"
                        android:layout_centerInParent="true"
                        app:civ_border_color="#0b4060" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/iv_profile_edit"
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_alignParentBottom="true"
                        android:src="@drawable/ic_edit_profile"
                        android:layout_margin="@dimen/_10sdp"
                        android:layout_alignParentEnd="true">
                    </androidx.appcompat.widget.AppCompatImageView>

                </RelativeLayout>
            </RelativeLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</RelativeLayout>